// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getPokemonNames > shall return all amber pokemon 1`] = `
[
  "BUTTERFREE",
  "ARBOK",
  "ALTARIA",
  "SALAMENCE",
  "CATERPIE",
  "METAPOD",
  "EKANS",
  "BAGON",
  "SHELGON",
  "PINSIR",
  "DRAGONITE",
  "TOXICROAK",
  "VIKAVOLT",
  "DRAMPA",
  "CLODSIRE",
  "DRATINI",
  "DRAGONAIR",
  "WOOPER_PALDEAN",
  "CROAGUNK",
  "GRUBBIN",
  "CHARJABUG",
  "SHUCKLE",
  "HERACROSS",
  "SWALOT",
  "LATIAS",
  "LATIOS",
  "CRUSTLE",
  "TOXTRICITY_AMPED",
  "TOXTRICITY_LOW_KEY",
  "NOIBAT",
  "NOIVERN",
  "GULPIN",
  "DWEBBLE",
  "TOXEL",
]
`;

exports[`getPokemonNames > shall return all cyan pokemon 1`] = `
[
  "CLEFABLE",
  "DODRIO",
  "FERALIGATR",
  "TINKATON",
  "CLEFAIRY",
  "DODUO",
  "TOTODILE",
  "CROCONAW",
  "CLEFFA",
  "MUDKIP",
  "SWABLU",
  "PIPLUP",
  "PRINPLUP",
  "TINKATINK",
  "TINKATUFF",
  "BLASTOISE",
  "FARFETCHD",
  "QUAGSIRE",
  "DELIBIRD",
  "COMFEY",
  "CRAMORANT",
  "QUAXWELL",
  "RIBOMBEE",
  "SQUIRTLE",
  "WARTORTLE",
  "WOOPER",
  "CUTIEFLY",
  "QUAXLY",
  "WIGGLYTUFF",
  "GOLDUCK",
  "SLOWBRO",
  "VAPOREON",
  "SLOWKING",
  "SUICUNE",
  "TOGEKISS",
  "BRAVIARY",
  "SYLVEON",
  "HAWLUCHA",
  "JIGGLYPUFF",
  "PSYDUCK",
  "SLOWPOKE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
  "RUFFLET",
]
`;

exports[`getPokemonNames > shall return all lapis pokemon 1`] = `
[
  "PRIMEAPE",
  "MEGANIUM",
  "XATU",
  "BLAZIKEN",
  "MUSHARNA",
  "MANKEY",
  "CHIKORITA",
  "BAYLEEF",
  "NATU",
  "COMBUSKEN",
  "MUNNA",
  "VENUSAUR",
  "VICTREEBEL",
  "MR_MIME",
  "BEWEAR",
  "FLORAGATO",
  "QUAQUAVAL",
  "BULBASAUR",
  "IVYSAUR",
  "BELLSPROUT",
  "WEEPINBELL",
  "MIME_JR",
  "STUFFUL",
  "SPRIGATITO",
  "MEWTWO",
  "ESPEON",
  "WOBBUFFET",
  "SCEPTILE",
  "INFERNAPE",
  "GARDEVOIR",
  "LUCARIO",
  "LEAFEON",
  "GALLADE",
  "CRESSELIA",
  "TREECKO",
  "GROVYLE",
  "TURTWIG",
  "GROTLE",
  "MONFERNO",
  "RALTS",
  "KIRLIA",
  "WYNAUT",
  "RIOLU",
  "MEW",
]
`;

exports[`getPokemonNames > shall return all pokemon by default 1`] = `
[
  "BUTTERFREE",
  "RATICATE",
  "ARBOK",
  "PIKACHU_HALLOWEEN",
  "PIKACHU_CAPTAIN",
  "RAICHU",
  "CLEFABLE",
  "NINETALES",
  "NINETALES_ALOLAN",
  "PRIMEAPE",
  "DODRIO",
  "ONIX",
  "MAROWAK",
  "MEGANIUM",
  "TYPHLOSION",
  "FERALIGATR",
  "XATU",
  "STEELIX",
  "HOUNDOOM",
  "BLAZIKEN",
  "SWAMPERT",
  "VIGOROTH",
  "SLAKING",
  "ALTARIA",
  "BANETTE",
  "WALREIN",
  "SALAMENCE",
  "EMPOLEON",
  "WEAVILE",
  "MUSHARNA",
  "TYRANTRUM",
  "TINKATON",
  "CATERPIE",
  "METAPOD",
  "RATTATA",
  "EKANS",
  "PIKACHU",
  "CLEFAIRY",
  "VULPIX",
  "VULPIX_ALOLAN",
  "MANKEY",
  "DODUO",
  "CUBONE",
  "EEVEE_HOLIDAY",
  "CHIKORITA",
  "BAYLEEF",
  "CYNDAQUIL",
  "QUILAVA",
  "TOTODILE",
  "CROCONAW",
  "PICHU",
  "CLEFFA",
  "NATU",
  "SNEASEL",
  "HOUNDOUR",
  "TORCHIC",
  "COMBUSKEN",
  "MUDKIP",
  "MARSHTOMP",
  "SLAKOTH",
  "SWABLU",
  "SHUPPET",
  "SPHEAL",
  "SEALEO",
  "BAGON",
  "SHELGON",
  "PIPLUP",
  "PRINPLUP",
  "MUNNA",
  "TYRUNT",
  "TINKATINK",
  "TINKATUFF",
  "VENUSAUR",
  "CHARIZARD",
  "BLASTOISE",
  "DUGTRIO",
  "VICTREEBEL",
  "GOLEM",
  "FARFETCHD",
  "GENGAR",
  "KANGASKHAN",
  "MR_MIME",
  "PINSIR",
  "DITTO",
  "DRAGONITE",
  "QUAGSIRE",
  "DELIBIRD",
  "BLISSEY",
  "PUPITAR",
  "TYRANITAR",
  "MAWILE",
  "AGGRON",
  "FLYGON",
  "ABSOL",
  "LUXRAY",
  "TOXICROAK",
  "ABOMASNOW",
  "GOURGEIST_SMALL",
  "GOURGEIST_MEDIUM",
  "GOURGEIST_LARGE",
  "GOURGEIST_JUMBO",
  "VIKAVOLT",
  "BEWEAR",
  "COMFEY",
  "CRAMORANT",
  "DRAMPA",
  "FLORAGATO",
  "MEOWSCARADA",
  "CROCALOR",
  "SKELEDIRGE",
  "QUAXWELL",
  "QUAQUAVAL",
  "CETITAN",
  "CLODSIRE",
  "RIBOMBEE",
  "BULBASAUR",
  "IVYSAUR",
  "CHARMANDER",
  "CHARMELEON",
  "SQUIRTLE",
  "WARTORTLE",
  "DIGLETT",
  "BELLSPROUT",
  "WEEPINBELL",
  "GEODUDE",
  "GRAVELER",
  "GASTLY",
  "HAUNTER",
  "CHANSEY",
  "DRATINI",
  "DRAGONAIR",
  "WOOPER",
  "WOOPER_PALDEAN",
  "LARVITAR",
  "ARON",
  "LAIRON",
  "TRAPINCH",
  "VIBRAVA",
  "SHINX",
  "LUXIO",
  "MIME_JR",
  "HAPPINY",
  "SPIRITOMB",
  "CROAGUNK",
  "SNOVER",
  "PUMPKABOO_SMALL",
  "PUMPKABOO_MEDIUM",
  "PUMPKABOO_LARGE",
  "PUMPKABOO_JUMBO",
  "GRUBBIN",
  "CUTIEFLY",
  "CHARJABUG",
  "STUFFUL",
  "SPRIGATITO",
  "FUECOCO",
  "QUAXLY",
  "CETODDLE",
  "MEWTWO",
  "WIGGLYTUFF",
  "PERSIAN",
  "GOLDUCK",
  "ARCANINE",
  "SLOWBRO",
  "EEVEE_HALLOWEEN",
  "VAPOREON",
  "JOLTEON",
  "FLAREON",
  "AMPHAROS",
  "SUDOWOODO",
  "ESPEON",
  "UMBREON",
  "SLOWKING",
  "WOBBUFFET",
  "SHUCKLE",
  "HERACROSS",
  "RAIKOU",
  "ENTEI",
  "SUICUNE",
  "SCEPTILE",
  "TORTERRA",
  "INFERNAPE",
  "GARDEVOIR",
  "SABLEYE",
  "PLUSLE",
  "MINUN",
  "SWALOT",
  "SPHEAL_HOLIDAY",
  "DRIFBLIM",
  "HONCHKROW",
  "LUCARIO",
  "MAGNEZONE",
  "TOGEKISS",
  "LEAFEON",
  "GLACEON",
  "GALLADE",
  "CRESSELIA",
  "LATIAS",
  "LATIOS",
  "CRUSTLE",
  "SANDSLASH",
  "BRAVIARY",
  "SYLVEON",
  "HAWLUCHA",
  "DEDENNE",
  "TOGEDEMARU",
  "MIMIKYU",
  "TOXTRICITY_AMPED",
  "TOXTRICITY_LOW_KEY",
  "PAWMOT",
  "PIKACHU_HOLIDAY",
  "JIGGLYPUFF",
  "MEOWTH",
  "PSYDUCK",
  "GROWLITHE",
  "SLOWPOKE",
  "MAGNEMITE",
  "MAGNETON",
  "EEVEE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
  "MAREEP",
  "FLAAFFY",
  "MURKROW",
  "NOIBAT",
  "NOIVERN",
  "TREECKO",
  "GROVYLE",
  "TURTWIG",
  "GROTLE",
  "CHIMCHAR",
  "MONFERNO",
  "RALTS",
  "KIRLIA",
  "GULPIN",
  "WYNAUT",
  "BONSLY",
  "DRIFLOON",
  "RIOLU",
  "DWEBBLE",
  "RUFFLET",
  "SANDSHREW",
  "TOXEL",
  "PAWMI",
  "PAWMO",
  "MEW",
  "DARKRAI",
]
`;

exports[`getPokemonNames > shall return all pokemon for multiple islands 1`] = `
[
  "RATICATE",
  "PIKACHU_HALLOWEEN",
  "PIKACHU_CAPTAIN",
  "RAICHU",
  "CLEFABLE",
  "NINETALES",
  "NINETALES_ALOLAN",
  "PRIMEAPE",
  "DODRIO",
  "ONIX",
  "MAROWAK",
  "MEGANIUM",
  "TYPHLOSION",
  "FERALIGATR",
  "XATU",
  "STEELIX",
  "HOUNDOOM",
  "BLAZIKEN",
  "SWAMPERT",
  "VIGOROTH",
  "SLAKING",
  "BANETTE",
  "WALREIN",
  "EMPOLEON",
  "WEAVILE",
  "MUSHARNA",
  "TYRANTRUM",
  "TINKATON",
  "RATTATA",
  "PIKACHU",
  "CLEFAIRY",
  "VULPIX",
  "VULPIX_ALOLAN",
  "MANKEY",
  "DODUO",
  "CUBONE",
  "EEVEE_HOLIDAY",
  "CHIKORITA",
  "BAYLEEF",
  "CYNDAQUIL",
  "QUILAVA",
  "TOTODILE",
  "CROCONAW",
  "PICHU",
  "CLEFFA",
  "NATU",
  "SNEASEL",
  "HOUNDOUR",
  "TORCHIC",
  "COMBUSKEN",
  "MUDKIP",
  "MARSHTOMP",
  "SLAKOTH",
  "SWABLU",
  "SHUPPET",
  "SPHEAL",
  "SEALEO",
  "PIPLUP",
  "PRINPLUP",
  "MUNNA",
  "TYRUNT",
  "TINKATINK",
  "TINKATUFF",
  "VENUSAUR",
  "CHARIZARD",
  "BLASTOISE",
  "DUGTRIO",
  "VICTREEBEL",
  "GOLEM",
  "FARFETCHD",
  "GENGAR",
  "KANGASKHAN",
  "MR_MIME",
  "DITTO",
  "QUAGSIRE",
  "DELIBIRD",
  "BLISSEY",
  "PUPITAR",
  "TYRANITAR",
  "MAWILE",
  "AGGRON",
  "FLYGON",
  "ABSOL",
  "LUXRAY",
  "ABOMASNOW",
  "GOURGEIST_SMALL",
  "GOURGEIST_MEDIUM",
  "GOURGEIST_LARGE",
  "GOURGEIST_JUMBO",
  "BEWEAR",
  "COMFEY",
  "CRAMORANT",
  "FLORAGATO",
  "MEOWSCARADA",
  "CROCALOR",
  "SKELEDIRGE",
  "QUAXWELL",
  "QUAQUAVAL",
  "CETITAN",
  "RIBOMBEE",
  "BULBASAUR",
  "IVYSAUR",
  "CHARMANDER",
  "CHARMELEON",
  "SQUIRTLE",
  "WARTORTLE",
  "DIGLETT",
  "BELLSPROUT",
  "WEEPINBELL",
  "GEODUDE",
  "GRAVELER",
  "GASTLY",
  "HAUNTER",
  "CHANSEY",
  "WOOPER",
  "LARVITAR",
  "ARON",
  "LAIRON",
  "TRAPINCH",
  "VIBRAVA",
  "SHINX",
  "LUXIO",
  "MIME_JR",
  "HAPPINY",
  "SPIRITOMB",
  "SNOVER",
  "PUMPKABOO_SMALL",
  "PUMPKABOO_MEDIUM",
  "PUMPKABOO_LARGE",
  "PUMPKABOO_JUMBO",
  "CUTIEFLY",
  "STUFFUL",
  "SPRIGATITO",
  "FUECOCO",
  "QUAXLY",
  "CETODDLE",
  "MEWTWO",
  "WIGGLYTUFF",
  "PERSIAN",
  "GOLDUCK",
  "ARCANINE",
  "SLOWBRO",
  "EEVEE_HALLOWEEN",
  "VAPOREON",
  "JOLTEON",
  "FLAREON",
  "AMPHAROS",
  "SUDOWOODO",
  "ESPEON",
  "UMBREON",
  "SLOWKING",
  "WOBBUFFET",
  "RAIKOU",
  "ENTEI",
  "SUICUNE",
  "SCEPTILE",
  "TORTERRA",
  "INFERNAPE",
  "GARDEVOIR",
  "SABLEYE",
  "PLUSLE",
  "MINUN",
  "SPHEAL_HOLIDAY",
  "DRIFBLIM",
  "HONCHKROW",
  "LUCARIO",
  "MAGNEZONE",
  "TOGEKISS",
  "LEAFEON",
  "GLACEON",
  "GALLADE",
  "CRESSELIA",
  "SANDSLASH",
  "BRAVIARY",
  "SYLVEON",
  "HAWLUCHA",
  "DEDENNE",
  "TOGEDEMARU",
  "MIMIKYU",
  "PAWMOT",
  "PIKACHU_HOLIDAY",
  "JIGGLYPUFF",
  "MEOWTH",
  "PSYDUCK",
  "GROWLITHE",
  "SLOWPOKE",
  "MAGNEMITE",
  "MAGNETON",
  "EEVEE",
  "IGGLYBUFF",
  "TOGEPI",
  "TOGETIC",
  "MAREEP",
  "FLAAFFY",
  "MURKROW",
  "TREECKO",
  "GROVYLE",
  "TURTWIG",
  "GROTLE",
  "CHIMCHAR",
  "MONFERNO",
  "RALTS",
  "KIRLIA",
  "WYNAUT",
  "BONSLY",
  "DRIFLOON",
  "RIOLU",
  "RUFFLET",
  "SANDSHREW",
  "PAWMI",
  "PAWMO",
  "MEW",
  "DARKRAI",
]
`;

exports[`getPokemonNames > shall return all power plant pokemon 1`] = `
[
  "PIKACHU_HALLOWEEN",
  "PIKACHU_CAPTAIN",
  "RAICHU",
  "STEELIX",
  "BANETTE",
  "EMPOLEON",
  "PIKACHU",
  "PICHU",
  "SHUPPET",
  "GENGAR",
  "MAWILE",
  "AGGRON",
  "LUXRAY",
  "GOURGEIST_SMALL",
  "GOURGEIST_MEDIUM",
  "GOURGEIST_LARGE",
  "GOURGEIST_JUMBO",
  "SKELEDIRGE",
  "GASTLY",
  "HAUNTER",
  "ARON",
  "LAIRON",
  "SHINX",
  "LUXIO",
  "PUMPKABOO_SMALL",
  "PUMPKABOO_MEDIUM",
  "PUMPKABOO_LARGE",
  "PUMPKABOO_JUMBO",
  "JOLTEON",
  "AMPHAROS",
  "RAIKOU",
  "PLUSLE",
  "MINUN",
  "DRIFBLIM",
  "MAGNEZONE",
  "DEDENNE",
  "TOGEDEMARU",
  "MIMIKYU",
  "PAWMOT",
  "PIKACHU_HOLIDAY",
  "MAGNEMITE",
  "MAGNETON",
  "MAREEP",
  "FLAAFFY",
  "DRIFLOON",
  "PAWMI",
  "PAWMO",
]
`;

exports[`getPokemonNames > shall return all snowdrop pokemon 1`] = `
[
  "RATICATE",
  "NINETALES_ALOLAN",
  "HOUNDOOM",
  "VIGOROTH",
  "SLAKING",
  "WALREIN",
  "WEAVILE",
  "RATTATA",
  "VULPIX_ALOLAN",
  "EEVEE_HOLIDAY",
  "SNEASEL",
  "HOUNDOUR",
  "SLAKOTH",
  "SPHEAL",
  "SEALEO",
  "KANGASKHAN",
  "DITTO",
  "BLISSEY",
  "TYRANITAR",
  "ABSOL",
  "ABOMASNOW",
  "MEOWSCARADA",
  "CETITAN",
  "CHANSEY",
  "HAPPINY",
  "SPIRITOMB",
  "SNOVER",
  "CETODDLE",
  "PERSIAN",
  "EEVEE_HALLOWEEN",
  "UMBREON",
  "SABLEYE",
  "SPHEAL_HOLIDAY",
  "HONCHKROW",
  "GLACEON",
  "MEOWTH",
  "EEVEE",
  "MURKROW",
  "DARKRAI",
]
`;

exports[`getPokemonNames > shall return all taupe pokemon 1`] = `
[
  "NINETALES",
  "ONIX",
  "MAROWAK",
  "TYPHLOSION",
  "SWAMPERT",
  "TYRANTRUM",
  "VULPIX",
  "CUBONE",
  "CYNDAQUIL",
  "QUILAVA",
  "TORCHIC",
  "MARSHTOMP",
  "TYRUNT",
  "CHARIZARD",
  "DUGTRIO",
  "GOLEM",
  "PUPITAR",
  "FLYGON",
  "CROCALOR",
  "CHARMANDER",
  "CHARMELEON",
  "DIGLETT",
  "GEODUDE",
  "GRAVELER",
  "LARVITAR",
  "TRAPINCH",
  "VIBRAVA",
  "FUECOCO",
  "ARCANINE",
  "FLAREON",
  "SUDOWOODO",
  "ENTEI",
  "TORTERRA",
  "SANDSLASH",
  "GROWLITHE",
  "CHIMCHAR",
  "BONSLY",
  "SANDSHREW",
]
`;
